# corner.py

./: .copier-answers.yml  .gitignore  .gitignore.rej  .pre-commit-config.yaml  .rtd-environment.yml  .travis.yml  CONTRIBUTING.md  LICENSE  LICENSE.rej  MANIFEST.in  README  README.md  README.rst  corner.py  demo.py  noxfile.py  pyproject.toml  pyproject.toml.rej  readthedocs.yaml  readthedocs.yaml.rej  readthedocs.yml  setup.py  sigma-demo.ipynb  tests.py  triangle.py
.github/workflows/: tests.yml  update-template.yml
corner/: __init__.py  corner.py
corner/tests/: test_corner.py  test_hist2d.py
docs/: .gitignore  Makefile  api.rst  conf.py  index.md  index.rst  install.rst  license.md  requirements.txt
docs/_static/: README.md
docs/_static/notebooks/: custom.ipynb  quickstart.ipynb  sigmas.ipynb
docs/pages/: arviz.ipynb  custom.ipynb  custom.rst  matplotlibrc  page_rst.tpl  quickstart.ipynb  quickstart.rst  sigmas.ipynb  sigmas.rst
docs/tutorials/: tutorial_rst.tpl
paper/: paper.bib  paper.json  paper.md  paper.tex
src/corner/: __init__.py  arviz_corner.py  core.py  corner.py
tests/: conftest.py  test_corner.py  test_hist2d.py  test_quantile.py
